Created dashboard layout and fronted routes

--- a/client/src/styles/components/index.scss
+++ b/client/src/styles/components/index.scss
@@ -1,2 +1,7 @@
+@use '../utils/' as *;
 @forward './buttons';
 @forward './app';
+@forward './deck';
+@forward './flashcard';
+@forward './input';
+@forward './uishowcase';
