--- a/client/src/styles/base/_globals.scss
+++ b/client/src/styles/base/_globals.scss
@@ -1,3 +1,4 @@
+@use '../utils/variables' as *;
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -15,11 +16,9 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  font-family: sans-serif;
+  padding-left: 300px; 
+  font-family: "Poppins", sans-serif;
+  color: $primary;
 }
 
 h1 {
@@ -28,47 +27,61 @@ h1 {
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  font-weight: 500;  
+  color: $purple;
   text-decoration: inherit;
 
-  &:hover {
-    color: #535bf2;
+  &:hover {  
+    color: $purple;
   }
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-
-  &:hover {
-    border-color: #646cff;
-  }
-
-  &:focus,
-  &:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-  }
+.mt0{
+  margin-top: 0;
 }
+.mt1{
+  margin-top: 1rem;
+}
+.mt2{
+  margin-top: 2rem;
+}
+.mt5{
+  margin-top: 5px;
+}
+.mt10{
+  margin-top: 10px;
+}
+.mt20{
+  margin-top: 20px;
+}
+.mt30{
+  margin-top: 30px;
+}
+
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: $primary;
+    background-color: $white
   }
 
   a:hover {
-    color: #747bff;
+    color: $purple;
   }
 
   button {
     background-color: #f9f9f9;
   }
+}
+
+*,*::after,*::before{
+  box-sizing: border-box;
+}
+
+
+@media(max-width:1199px) {
+  body {
+    padding-left: 0; 
+  }
+  
 }
