--- a/client/src/styles/layouts/_header.scss
+++ b/client/src/styles/layouts/_header.scss
@@ -1,21 +1,18 @@
 /* _header.scss */
 header {
-  background-color: #1a1a1a;
-  color: white;
-  padding: 1rem 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 
+  h3 {
+    margin: 0;
+  }
+  p {
+    margin-top: 0;
+  }
   nav {
     display: flex;
     justify-content: space-between;
     width: 100%;
     max-width: 1200px;
 
-    h1 {
-      margin: 0;
-    }
 
     button {
       background-color: #646cff;
@@ -29,5 +26,19 @@ header {
         background-color: #535bf2;
       }
     }
+  }
+  .menu-collapse {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    cursor: pointer;
+    display: none;
+  }
+}
+
+
+@media(max-width:1199px) {
+  header .menu-collapse {
+    display: block;
   }
 }
