--- a/client/src/styles/components/_textarea.scss
+++ b/client/src/styles/components/_textarea.scss
@@ -10,7 +10,7 @@
     font-weight: 600;
   }
 
-  input {
+  textarea {
     padding: 0.6rem 1rem;
     border: 1px solid #ddd;
     border-radius: 0.5rem;
@@ -18,7 +18,7 @@
     font-family: inherit;
     transition: border-color 0.2s;
     color: $primary;
-    height: 46px;
+    height: auto;
     &:focus {
       border-color: $purple;
       outline: none;
