--- a/client/src/styles/components/_buttons.scss
+++ b/client/src/styles/components/_buttons.scss
@@ -14,11 +14,22 @@
   border: none;
   cursor: pointer;
   font-family: inherit;
+  min-height: 42px;
+  position: relative;   
+  display: flex;
+  align-items: center;
+  gap: .5rem;
   &.primary {
     background-color: $purple;
     color: $white;
     a {
       color: $white;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      line-height: 42px;
     }
     &:hover {
       background-color: darken($purple, 10%);
