--- a/client/src/styles/components/_input.scss
+++ b/client/src/styles/components/_input.scss
@@ -2,8 +2,8 @@
 .input-group {
   display: flex;
   flex-direction: column;
-  gap: 0.4rem;
-  margin-bottom: 1rem;
+  gap: 0.2rem;
+  margin-bottom: .75rem;
   label {
     font-size: 0.9rem;
     color: $primary;
