--- a/client/src/styles/components/index.scss
+++ b/client/src/styles/components/index.scss
@@ -2,8 +2,9 @@
 @forward './buttons';
 @forward './app';
 @forward './deckcard';
-@forward './flashcard';
+@forward './flashcardStudy';
 @forward './input';
 @forward './toggleswitch';
 @forward './uishowcase';
 @forward './textarea';
+@forward './backgroundstudy'
