--- a/client/src/styles/components/_deckcard.scss
+++ b/client/src/styles/components/_deckcard.scss
@@ -20,13 +20,14 @@
   }
   .deck-card {
     background: linear-gradient(to bottom, #ef476f, #f78c25);
-    background: linear-gradient(to bottom, hsl(250.83deg 35.64% 60.39% / 70%), hsl(205.71deg 7.07% 19.41% / 30%));
+    // background: linear-gradient(to bottom, hsl(250.83deg 35.64% 60.39% / 70%), hsl(205.71deg 7.07% 19.41% / 30%));
+    background: linear-gradient(to bottom, $purple, var(--primary));
     border-radius: 1rem;
     padding: 1.5rem;
     width: 220px;
     height: 320px;
     margin-right: 2rem;
-    color: #ffffff;
+    color: $white;
     transition: all 0.3s linear;
     position: relative;
     cursor: pointer;
@@ -87,7 +88,7 @@
     right: -8px;
     opacity: 0;
     background-color: $primary;
-    color: $white;
+    color: $whitebg;
     transition: all 0.3s ease-in;
     border-radius: 100%;
     z-index: 9;
@@ -148,7 +149,7 @@
     width: 350px;
     height: 320px;
     padding: 1rem;
-    border: 1px solid #ddd;
+    border: 1px solid $border;
     border-radius: 1rem;
   }
 
@@ -161,6 +162,25 @@
   }
   .lucide-trash-2 {
     display: none;
+  }
+}
+
+
+
+@media (prefers-color-scheme: dark) {
+  .deck-wrapper {
+    .deck-card {
+      background: $grey;
+      border: 1px solid $grey1;
+    }
+    .flashcards {
+      .card {
+        background-color: $grey1;
+      }
+    }
+    .edit-overlay {
+      background: rgb(131 131 131 / 40%);
+    }
   }
 }
 
@@ -181,7 +201,7 @@
 @media(max-width:767px) {
   .deck-wrapper {
     padding: 0;
-    border: 1px solid #e4e4e4;
+    border: 1px solid $purple !important;
     border-radius: 1rem;
     margin-bottom: 1rem;
     overflow: visible;
@@ -191,7 +211,8 @@
       width: 100%;
       height: auto;
       border-radius: 1rem 1rem 0 0;
-      padding: 1.25rem;
+      padding: 1.25rem;    
+      background: $purple;
       button {
         width: 80px;
       }
@@ -266,8 +287,8 @@
             top: -8px;
             right: -8px;
             display: block;
-            background-color: #2e3235;
-            color: #ffffff;
+            background-color: $primary;
+            color: $white;
             transition: all 0.3s ease-in;
             border-radius: 100%;
             z-index: 9;
@@ -310,4 +331,28 @@
       height: auto;
     }
   }
+  @media (prefers-color-scheme: dark) {
+    .deck-wrapper {
+      .deck-card {
+        background: $grey;
+        border: 1px solid $grey1;
+      }
+      .flashcards {
+        .card {
+          box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.3);
+          &.widecard .lucide-circle-x {
+            background-color: #2e3235;
+            color: #ffffff;
+          }
+        }
+        &.new-card::after {
+          background: rgb(4 4 4 / 79%);
+        }
+      }
+      .edit-overlay {
+        background: transparent
+      }
+    }
+  }
+  
 }
