--- a/client/src/styles/components/_textarea.scss
+++ b/client/src/styles/components/_textarea.scss
@@ -12,7 +12,7 @@
 
   textarea {
     padding: 0.6rem 1rem;
-    border: 1px solid #ddd;
+    border: 1px solid $border;
     border-radius: 0.5rem;
     font-size: 1rem;
     font-family: inherit;
