--- a/client/src/styles/components/_goalslist.scss
+++ b/client/src/styles/components/_goalslist.scss
@@ -30,8 +30,8 @@
     background: linear-gradient(to bottom, hsl(220deg 20% 60% / 70%), hsl(200deg 15% 25% / 30%));
     border-radius: 1rem;
     padding: 1.5rem;
-    width: 220px;
-    height: 320px;
+    width: 100%;
+    height: auto;
     margin-right: 2rem;
     color: #ffffff;
     transition: all 0.3s linear;
@@ -49,16 +49,6 @@
       margin-top: 0;
       margin-bottom: 1rem;
       transition: all 0.3s linear;
-    }
-
-    .edit-overlay {
-      padding: 1.5rem;
-      height: auto;
-      width: auto;
-      background: transparent;
-      bottom: 0;
-      top: auto;
-      padding-top: 0;
     }
 
     &:hover,
@@ -84,12 +74,12 @@
   }
 
   .edit-overlay {
-    background: #6e669166;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    // background: #6e669166;
+    position: static;
+    bottom: 0;
+    right: 0;
+    width: auto;
+    height: auto;
     border-radius: 1rem;
     display: flex;
     align-items: end;
