Update GoalForm component for easier access to styling, update styling from both form and list

--- a/client/src/styles/components/_goalslist.scss
+++ b/client/src/styles/components/_goalslist.scss
@@ -46,6 +46,7 @@
     }
 
     p {
+      word-wrap: break-word;
       margin-top: 0;
       margin-bottom: 1rem;
       transition: all 0.3s linear;
