--- a/client/src/styles/components/_auth.scss
+++ b/client/src/styles/components/_auth.scss
@@ -9,7 +9,11 @@ border-radius: 12px;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-
+.logo {
+  font-size: 2.5rem;
+  font-weight: bold;
+  padding: 0;
+}
   h2 {
     text-align: center;
     font-size: 1.5rem;
