fixed bugs in header.jsx and other scss file & beautified login page + goal creation

--- a/client/src/styles/components/_input.scss
+++ b/client/src/styles/components/_input.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   gap: 0.2rem;
   margin-bottom: .75rem;
+  width:100%;
   label {
     font-size: 0.9rem;
     color: $primary;
