--- a/client/src/styles/components/index.scss
+++ b/client/src/styles/components/index.scss
@@ -7,5 +7,5 @@
 @forward './toggleswitch';
 @forward './uishowcase';
 @forward './textarea';
-@forward './backgroundstudy'
+@forward './backgroundstudy';
 @forward './auth';
