--- a/client/src/styles/components/_auth.scss
+++ b/client/src/styles/components/_auth.scss
@@ -1,73 +1,98 @@
-.auth-form {
-max-width: 400px;
-width: 100%;
-margin: 4rem auth;
-padding: 2rem;
-background-color: #ffffff;
-border-radius: 12px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-.logo {
-  font-size: 2.5rem;
-  font-weight: bold;
-  padding: 0;
-}
-  h2 {
-    text-align: center;
-    font-size: 1.5rem;
-    color: #1f2937;
-    margin-bottom: 1rem;
-  }
 
-  label {
-    color: #374151;
-    font-size: 1rem;
-  }
-
-  input {
-    padding: 0.75rem;
-    border: 1px solid #ccc;
-    background-color: #f9fafb;
-    color: #111827;
-    border-radius: 6px;
-    font-size: 1rem;
-    outline: none;
-
-    &:focus {
-      border-color: #6366f1;
-      box-shadow: 0 0 0 2px rgba(99, 102, 241, 0.2);
-    }
-  }
-
-  button {
-    padding: 0.75rem;
-    background-color: #6366f1;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 1rem;
-    transition: background-color 0.3s ease;
-
-    &:hover {
-      background-color: #4f46e5;
-    }
-  }
-}
-
-.form-field {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+.login {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
   width: 100%;
-  max-width: 300px;
-  margin: 0 auto 1rem auto;
+  min-height: 100vh;
+  display: flex;
+  margin: 0 auto;
+  align-items: center;
+  background: linear-gradient(to right, #8376c0 50%, transparent 50%);
+  .auth-form {
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    .logo {
+      width: 200px;
+      margin: 0 auto 2rem;
+    }
+  }
+  .studysync-intro{
+    max-width: 650px;
+    h1 {
+      line-height: 1.2;
+    }
+    p {
+      font-size: 1.25rem;
+    }
+  }
+  > * {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5rem;
+    color: #fff;
+  }
+}
+@media(max-width:1199px) {
+  .login {
+    background: linear-gradient(to right, #8376c0 60%, transparent 40%);
+    .studysync-intro {
+      h1 {
+        font-size: 2.5rem;
+      }
+    }
+    > * {
+      padding: 3rem;
+      &:first-child {
+        width: 60%;
+      }
+      &:last-child {
+        width: 40%;
+      }
+    }
+  }
 }
 
-.form-field label {
-  margin-bottom: 0.3rem;
-  font-weight: 600;
+@media(max-width:991px) {
+  .login {
+    background: linear-gradient(to top, #8376c0 47%, transparent 47%);
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    .studysync-intro {
+      h1 {
+        font-size: 2.5rem;
+      }
+    }
+    > * {
+      padding: 2rem;
+      &:first-child {
+        width: 100%;
+      }
+      &:last-child {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .login {
+    background: linear-gradient(to top, #8376c0 43%, transparent 43%);
+    .studysync-intro {
+      h1 {
+        font-size: 2rem;
+      }
+      p {
+        font-size: 1rem;
+      }
+    }
+    .auth-form {
+      width: 100%;
+    }
+  }
 }
