--- a/client/src/styles/components/_buttons.scss
+++ b/client/src/styles/components/_buttons.scss
@@ -18,6 +18,7 @@
   position: relative;   
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: .5rem;
   &.primary {
     background-color: $purple;
