--- a/client/src/styles/components/_goalform.scss
+++ b/client/src/styles/components/_goalform.scss
@@ -1,119 +1,3 @@
-.new_goal_title,
-.new_goal_description,
-.new_goal_targetHours {
-  margin-bottom: 1.5rem;
-}
-
-label {
-  font-weight: bold;
-  display: block;
-  margin-bottom: 0.5rem;
-}
-
-input,
-textarea {
-  width: 100%;
-  padding: 1rem;
-  font-size: 16px;
-  border: 1px solid grey;
-  border-radius: 0.75rem;
-  transition: all 0.3s ease-in-out;
-}
-
-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 1rem 2rem;
-  font-size: 16px;
-  border: none;
-  border-radius: 0.75rem;
-  cursor: pointer;
-  transition: all 0.3s linear;
-
-  &:hover,
-  &:focus,
-  &:focus-within,
-  &:focus-visible {
-    transform: translateY(-5px) scale(1.02);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    background-color: #45a049;
-  }
-
-  &:focus {
-    outline: none;
-  }
-}
-
-form {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 2rem;
-  background-color: #8376be;
-  border-radius: 1rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease-in-out;
-  position: relative;
-
-  &:hover {
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-  }
-}
-
-.close-icon {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  color: black;
-  border-radius: 50%;
-  padding: 6px;
-  cursor: pointer;
-  z-index: 2;
-  transition: background-color 0.2s;
-
-  &:hover {
-    background-color: primary-dark;
-  }
-}
-
-h3 {
-  text-align: center;
-  margin-bottom: 1.5rem;
-  font-size: 24px;
-  color: #333;
-}
-
-button[type="button"] {
-  background-color: #f44336;
-  margin-left: 1rem;
-
-  &:hover {
-    background-color: #e53935;
-  }
-}
-
-@media (max-width: 1600px) {
-  form {
-    max-width: 500px;
-  }
-}
-
-@media (max-width: 767px) {
-  form {
-    padding: 1rem;
-    max-width: 100%;
-  }
-
-  .new_goal_title,
-  .new_goal_description,
-  .new_goal_targetHours {
-    margin-bottom: 1.2rem;
-  }
-
-  button {
-    width: 100%;
-  }
-
-  h3 {
-    font-size: 22px;
-  }
+.char-count {
+  margin-bottom: 1rem;
 }
