--- a/client/src/styles/components/index.scss
+++ b/client/src/styles/components/index.scss
@@ -10,3 +10,5 @@
 @forward './backgroundstudy';
 @forward './auth';
 @forward './reviewqueue';
+@forward './studysession';
+@forward './studyhistory';
