--- a/client/src/styles/components/_backgroundstudy.scss
+++ b/client/src/styles/components/_backgroundstudy.scss
@@ -7,15 +7,16 @@
   top: 0;
   background: $whitebg;
   z-index: 99;
-  overflow: auto;
   h2 {
     font-size: 5rem;
+    line-height: 1.2;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     margin: 0;
     color: $primary;
+    text-align: center;
   }
   a {
     color: $primary;
@@ -48,7 +49,7 @@
     width: 100%;
     height: 100%;
     background: rgba(30, 30, 30, 0.35);
-    z-index: 1;
+    z-index: 13;
     backdrop-filter: blur(3px);
   } 
   
@@ -57,19 +58,28 @@
 @media(max-width:1199px) {
   .background-study {
     h2 {
-      font-size: 1.25rem;
-      position: absolute;
-      left: auto;
-      top: 12px;
-      transform: none;
-      margin: 0;
-      color: $primary;
-      right: 20px;
+      font-size: 2.25rem;
+      opacity: .2;
+      // position: absolute;
+      // left: auto;
+      // top: 12px;
+      // transform: none;
+      // margin: 0;
+      // color: $primary;
+      // right: 20px;
     }
   }
   .foreground-study{
+    padding-bottom: 5rem;
     .flashcards-study {
       height: auto
     }
+  }
+}
+
+@media(max-width:767px) {
+  .foreground-study{
+    overflow: auto;
+    padding-bottom: 5rem;
   }
 }
