--- a/client/src/styles/components/_flashcardStudy.scss
+++ b/client/src/styles/components/_flashcardStudy.scss
@@ -7,6 +7,7 @@
   transition: width 0.3s ease, height 0.3s ease;
   border-radius: 1rem;
   cursor: pointer;
+  z-index: 9;
 
   &.expand {
     position: fixed;
