--- a/client/src/styles/components/_goalform.scss
+++ b/client/src/styles/components/_goalform.scss
@@ -1,3 +1,18 @@
 .char-count {
   margin-bottom: 1rem;
 }
+
+// @media(max-width:767px) {
+//   .goal-form.edit-form {
+//     width: 90%;
+//     height: auto;
+//     position: fixed;
+//     top: 50%;
+//     transform: translate(-50%, -50%);
+//     left: 50%;
+//     padding: 20px;
+//     z-index: 999;
+//     background: var(--purple1);
+//     border-radius: 1rem;
+//   }
+// }
