--- a/client/src/styles/utils/_variables.scss
+++ b/client/src/styles/utils/_variables.scss
@@ -11,7 +11,7 @@ $white-light: #ffffff;
 $red-light: #c10d1a;
 $border-light: #dddddd;
 $yellow-light: #f4e399;
-
+$peach-light : #f3e0e5;
 // Define CSS custom properties
 :root {
   --primary: #{$primary-light};
@@ -22,6 +22,7 @@ $yellow-light: #f4e399;
   --grey1: #{$grey1-light};
   --white: #{$white-light};
   --yellow: #{$yellow-light};
+  --peach: #{$peach-light};
   --red: #{$red-light};
   --card: #{$grey1-light};
   --border: #{$border-light};
@@ -43,6 +44,7 @@ $yellow-light: #f4e399;
     --card: #4e4e4e;
     --border: #4e4e4e;
     --yellow: #{$yellow-light};
+    --peach: #{$peach-light};
   }
 }
 
@@ -57,6 +59,7 @@ $white: var(--white);
 $red: var(--red);
 $whitebg: var(--background);
 $yellow: var(--yellow);
+$peach: var(--peach);
 $border: var(--border);
 // margin
 
